# flatshop

./: LICENSE  README.md  bot.py  flatshop.txt  pyproject.toml  scraper.py  tokeniser.py
